-- ============================================================================
-- DROP AND CREATE TABLES - Clean slate + Normalized schema
-- ============================================================================
-- Generated by rulebook-to-postgres tool
-- Total Tables: 5
-- Total Raw Fields: 16
-- ============================================================================

-- ============================================================================
-- DROP SPECIFIC OBJECTS - Only dropping objects that will be recreated
-- ============================================================================

-- Drop functions (order: first, because views depend on them)
DROP FUNCTION IF EXISTS calc_human_agents_count_of_roles(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_roles_count_of_workflow_steps(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_roles_filled_by_m_box(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_roles_filled_by_name(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_roles_label_from_delegates_to(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_assigned_role_comment(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_assigned_role_filled_by(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_assigned_role_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_is_step_of_description(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_is_step_of_identifier(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflow_steps_is_step_of_title(TEXT) CASCADE;
DROP FUNCTION IF EXISTS calc_workflows_count_of_workflow_steps(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_human_agents_mbox(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_human_agents_name(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_roles_comment(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_roles_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflow_steps_label(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflow_steps_requires_human_approval(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflow_steps_sequence_position(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflows_created(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflows_description(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflows_identifier(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflows_modified(TEXT) CASCADE;
DROP FUNCTION IF EXISTS get_workflows_title(TEXT) CASCADE;

-- Drop views (order: second, because they depend on tables)
DROP VIEW IF EXISTS vw_human_agents CASCADE;
DROP VIEW IF EXISTS vw_name CASCADE;
DROP VIEW IF EXISTS vw_roles CASCADE;
DROP VIEW IF EXISTS vw_workflow_steps CASCADE;
DROP VIEW IF EXISTS vw_workflows CASCADE;

-- Drop tables (order: last, after dependent objects are removed)
DROP TABLE IF EXISTS human_agents CASCADE;
DROP TABLE IF EXISTS name CASCADE;
DROP TABLE IF EXISTS roles CASCADE;
DROP TABLE IF EXISTS workflow_steps CASCADE;
DROP TABLE IF EXISTS workflows CASCADE;

-- ============================================================================
-- CREATE TABLES - Normalized data only (no calculated fields)
-- ============================================================================

CREATE TABLE name (
);

CREATE TABLE workflows (
  workflow_id                         TEXT                 PRIMARY KEY,
  title                               TEXT                ,
  description                         TEXT                ,
  created                             TIMESTAMPTZ         ,
  modified                            TIMESTAMPTZ         ,
  identifier                          TEXT                
);
COMMENT ON TABLE workflows IS 'Table: Workflows';
COMMENT ON COLUMN workflows.title IS 'Human-readable name for the workflow. Maps to dct:title per Dublin Core.';
COMMENT ON COLUMN workflows.description IS 'Detailed description of the workflow purpose and scope. Maps to dct:description per Dublin Core.';
COMMENT ON COLUMN workflows.created IS 'Date the workflow was created. Maps to dct:created per Dublin Core.';
COMMENT ON COLUMN workflows.modified IS 'Date the workflow was last modified. Maps to dct:modified. Used to identify stale workflows per NTWF CQ5.';
COMMENT ON COLUMN workflows.identifier IS 'External reference identifier (e.g., ticket number). Maps to dct:identifier. Join key to operational systems.';

CREATE TABLE workflow_steps (
  workflow_step_id                    TEXT                 PRIMARY KEY,
  label                               TEXT                ,
  sequence_position                   INTEGER             ,
  requires_human_approval             BOOLEAN             ,
  is_step_of                          TEXT                ,
  assigned_role                       TEXT                
);
COMMENT ON TABLE workflow_steps IS 'Table: WorkflowSteps';
COMMENT ON COLUMN workflow_steps.label IS 'Human-readable name for the step. Maps to rdfs:label.';
COMMENT ON COLUMN workflow_steps.sequence_position IS 'Ordinal position in workflow sequence. Maps to ntwf:sequencePosition (functional). Supports positional ordering queries.';
COMMENT ON COLUMN workflow_steps.requires_human_approval IS 'Whether this step requires a human agent. Maps to ntwf:requiresHumanApproval. Answers NTWF CQ3.';
COMMENT ON COLUMN workflow_steps.is_step_of IS 'Parent workflow containing this step. Inverse of WorkflowSteps. Maps to ntwf:isStepOf.';
COMMENT ON COLUMN workflow_steps.assigned_role IS 'Role responsible for this step. Maps to ntwf:assignedRole (functional). Implements role-agent separation.';

CREATE TABLE roles (
  role_id                             TEXT                 PRIMARY KEY,
  label                               TEXT                ,
  comment                             TEXT                ,
  filled_by                           TEXT                ,
  workflow_steps                      TEXT                ,
  delegates_to                        TEXT                ,
  delegated_to_by                     TEXT                
);
COMMENT ON TABLE roles IS 'Table: Roles';
COMMENT ON COLUMN roles.label IS 'Human-readable name for the role. Maps to rdfs:label.';
COMMENT ON COLUMN roles.comment IS 'Description of the role''s responsibilities. Maps to rdfs:comment.';
COMMENT ON COLUMN roles.filled_by IS 'Agent currently filling this role. Maps to ntwf:filledBy. The change-management triple - update this when personnel change.';
COMMENT ON COLUMN roles.workflow_steps IS 'Steps assigned to this role. Inverse of AssignedRole.';
COMMENT ON COLUMN roles.delegates_to IS 'Role to escalate to when this role''s agent is unavailable. Maps to ntwf:delegatesTo. Enables delegation chain queries.';

CREATE TABLE human_agents (
  human_agent_id                      TEXT                 PRIMARY KEY,
  name                                TEXT                ,
  mbox                                TEXT                ,
  roles                               TEXT                
);
COMMENT ON TABLE human_agents IS 'Table: HumanAgents';
COMMENT ON COLUMN human_agents.name IS 'Full name of the person. Maps to foaf:name per FOAF ontology.';
COMMENT ON COLUMN human_agents.mbox IS 'Email address of the person. Maps to foaf:mbox per FOAF ontology. Used for contact and identity resolution.';
COMMENT ON COLUMN human_agents.roles IS 'Roles filled by this agent. Inverse of FilledBy.';

